--- a/competition.ipynb
+++ b/competition.ipynb
@@ -1139,7 +1139,8 @@
     "- Convert emoji into text that represent the emotion\n",
     "- Select the optimum combination between stemming and lemmatizing process. Improve the Lemmatizating process by considering more robust part of speech tag\n",
     "- Improve Logistic Regression: Regularization to reduce overfitting case, Hypertuning the parameter to find best value of the parameter such as number of iteration (GridSearchCV from sklearn can help to solve this)\n",
-    "- Try other models that are able to capture the semantic of the sentence (not only based on the feature), such as deep learning or language model (e.g.: Transformers, BERT)"
+    "- Try other models that are able to capture the semantic of the sentence (not only based on the feature), such as deep learning or language model (e.g.: Transformers, BERT)\n",
+    "- Try to use BM25 for feature extraction since it is the improved version of TF-IDF"
    ],
    "metadata": {
     "collapsed": false
